WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82585
Cross-platform processor core counter: fix build on OpenBSD/NetBSD.
https://bugs.webkit.org/show_bug.cgi?id=82585
Summary
Cross-platform processor core counter: fix build on OpenBSD/NetBSD.
Landry Breuil
Reported
2012-03-29 01:55:02 PDT
Followup to #81482, as stated in
comment #5
on OpenBSD/NetBSD you need to include sys/param.h to use sysctl(), otherwise some #defines are missing. Is it a problem to also include it on darwin/freebsd, or should it be made for all 4 oses ?
Attachments
Include sys/param.h to use sysctl() on Open/NetBSD
(1.05 KB, patch)
2012-04-24 15:27 PDT
,
Landry Breuil
no flags
Details
Formatted Diff
Diff
Include sys/param.h to use sysctl() on Open/NetBSD
(1.12 KB, patch)
2012-04-25 01:43 PDT
,
Landry Breuil
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Raphael Kubo da Costa (:rakuco)
Comment 1
2012-03-29 07:22:35 PDT
Using sys/param.h should be fine on FreeBSD as well (it includes sys/types.h if LOCORE is not defined). Dunno about OS X, as I don't have access to a Mac. You could try sending a patch and checking if the bots complain.
Landry Breuil
Comment 2
2012-04-24 15:27:15 PDT
Created
attachment 138667
[details]
Include sys/param.h to use sysctl() on Open/NetBSD Dunno if setting review to ? will be enough to trigger the bots...
Raphael Kubo da Costa (:rakuco)
Comment 3
2012-04-24 15:54:40 PDT
You need to submit a patch against the top-level tree, it looks like you've diff'ed against Source/WTF.
Landry Breuil
Comment 4
2012-04-25 01:39:36 PDT
Yeah, i don't have the full repo, only Source/. You guys have an insanely huge repo, i tried to svn co trunk once and gave up.
Landry Breuil
Comment 5
2012-04-25 01:43:04 PDT
Created
attachment 138760
[details]
Include sys/param.h to use sysctl() on Open/NetBSD Lets retry
Raphael Kubo da Costa (:rakuco)
Comment 6
2012-04-25 06:29:02 PDT
(In reply to
comment #4
)
> Yeah, i don't have the full repo, only Source/. You guys have an insanely huge repo, i tried to svn co trunk once and gave up.
The largest part of it is the LayoutTests/ directory, which you can ignore. $ svn co -N
http://svn.webkit.org/repository/webkit/trunk
WebKit $ cd WebKit $ svn up Source Additionally, the Tools/ directory has some useful scripts to help generate the ChangeLog entries and things like that.
Landry Breuil
Comment 7
2012-04-25 11:06:33 PDT
All green on the bots.. anyone care to review/commit ?
Zoltan Herczeg
Comment 8
2012-04-25 15:15:28 PDT
Comment on
attachment 138760
[details]
Include sys/param.h to use sysctl() on Open/NetBSD r=me
Raphael Kubo da Costa (:rakuco)
Comment 9
2012-04-25 16:01:34 PDT
Comment on
attachment 138760
[details]
Include sys/param.h to use sysctl() on Open/NetBSD Clearing flags on attachment: 138760 Committed
r115254
: <
http://trac.webkit.org/changeset/115254
>
Raphael Kubo da Costa (:rakuco)
Comment 10
2012-04-25 16:01:43 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug